force-app/main/default/objects/Case/fields/CS_Flow__c.field-meta.xml
<CustomField>
    <fullName>CS_Flow__c</fullName>
    <label>CS Flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01. UW AAD</fullName>
            </value>
            <value>
                <fullName>02. UW</fullName>
            </value>
            <value>
                <fullName>03. BU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>