force-app/main/default/objects/Case/fields/CS_Status__c.field-meta.xml
<CustomField>
    <fullName>CS_Status__c</fullName>
    <label>CS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01. Onhand CS1</fullName>
            </value>
            <value>
                <fullName>02. Onhand AAD</fullName>
            </value>
            <value>
                <fullName>03. Onhand ZM</fullName>
            </value>
            <value>
                <fullName>04. Onhand UW</fullName>
            </value>
            <value>
                <fullName>05. Onhand CS2</fullName>
            </value>
            <value>
                <fullName>06. Done Approve BU</fullName>
            </value>
            <value>
                <fullName>07. Done Approve UW</fullName>
            </value>
            <value>
                <fullName>08. Done Approve CS</fullName>
            </value>
            <value>
                <fullName>09. Done Reject BU</fullName>
            </value>
            <value>
                <fullName>10. Done Reject UW</fullName>
            </value>
            <value>
                <fullName>11. Done Reject CS</fullName>
            </value>
            <value>
                <fullName>12. Cancel CS</fullName>
            </value>
            <value>
                <fullName>13. Customer_Not Accept</fullName>
            </value>
            <value>
                <fullName>14. Customer_Cancel</fullName>
            </value>
            <value>
                <fullName>13. Send to Operation</fullName>
                <isActive>false</isActive>
                <label>13. Send to Operation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>