force-app/main/default/objects/Case/fields/Current_Service_Template__c.field-meta.xml
<CustomField>
    <fullName>Current_Service_Template__c</fullName>
    <label>Current Service Template</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>CardProduct</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>MoneyTransfer</fullName>
            </value>
            <value>
                <fullName>CheckInvalidTransfer</fullName>
            </value>
            <value>
                <fullName>BillPayTopup</fullName>
            </value>
            <value>
                <fullName>CreditService</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>DepositWithdraw</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>