force-app/main/default/objects/Case/fields/Customer_BOT__c.field-meta.xml
<CustomField>
    <fullName>Customer_BOT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>บัญชีกู้ร่วม</inlineHelpText>
    <label>Customer BOT</label>
    <length>55</length>
    <type>Text</type>
</CustomField>