force-app/main/default/objects/Case/fields/Customer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_First_Name__c</fullName>
    <description>This field for send to CXM only.</description>
    <formula>Account.First_name_PE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer First Name</label>
    <type>Text</type>
</CustomField>