force-app/main/default/objects/Case/fields/Customer_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID_Number__c</fullName>
    <formula>Account.ID_Number_PE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer ID Number</label>
    <type>Text</type>
</CustomField>