force-app/main/default/objects/Case/fields/Customer_ID_OneApp__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID_OneApp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Customer ID OneApp</label>
    <length>40</length>
    <type>Text</type>
</CustomField>