force-app/main/default/objects/Case/fields/Customer_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID_Type__c</fullName>
    <formula>TEXT(Account.ID_Type_PE__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer ID Type</label>
    <type>Text</type>
</CustomField>