force-app/main/default/objects/Case/fields/Customer_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_Mobile_No__c</fullName>
    <formula>Account.Mobile_Number_PE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Mobile No.</label>
    <type>Text</type>
</CustomField>