force-app/main/default/objects/Case/fields/Customer_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owner_ID__c</fullName>
    <formula>Account.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Owner ID</label>
    <type>Text</type>
</CustomField>