force-app/main/default/objects/Case/fields/Customer_Wealth_RM_BM__c.field-meta.xml
<CustomField>
    <fullName>Customer_Wealth_RM_BM__c</fullName>
    <formula>Account.RTL_Wealth_RM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Wealth RM/BM</label>
    <type>Text</type>
</CustomField>