force-app/main/default/objects/Case/fields/CXM_write_log_flag__c.field-meta.xml
<CustomField>
    <fullName>CXM_write_log_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CXM write log flag</label>
    <type>Checkbox</type>
</CustomField>