force-app/main/default/objects/Case/fields/Day10__c.field-meta.xml
<CustomField>
    <fullName>Day10__c</fullName>
    <formula>if(value(Trim(right(left(Text(CreatedDate),10),2))) = 10 ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>