force-app/main/default/objects/Case/fields/Day12__c.field-meta.xml
<CustomField>
    <fullName>Day12__c</fullName>
    <formula>if(value(Trim(right(left(Text(CreatedDate),10),2))) = 12 ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>