force-app/main/default/objects/Case/fields/Decrease_O_S__c.field-meta.xml
<CustomField>
    <fullName>Decrease_O_S__c</fullName>
    <label>Decrease O/S</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>