force-app/main/default/objects/Case/fields/DOA_Waive_Fee__c.field-meta.xml
<CustomField>
    <fullName>DOA_Waive_Fee__c</fullName>
    <label>DOA Waive Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zone</fullName>
            </value>
            <value>
                <fullName>RGM</fullName>
            </value>
            <value>
                <fullName>GH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>