force-app/main/default/objects/Case/fields/Domain_for_send_email__c.field-meta.xml
<CustomField>
    <fullName>Domain_for_send_email__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain for send email</label>
    <type>Text</type>
</CustomField>