force-app/main/default/objects/Case/fields/Email_duration__c.field-meta.xml
<CustomField>
    <fullName>Email_duration__c</fullName>
    <formula>NOW() -  Email_Incoming_Date_time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>