force-app/main/default/objects/Case/fields/Email_Source__c.field-meta.xml
<CustomField>
    <fullName>Email_Source__c</fullName>
    <label>Email Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email - TMBWeb</fullName>
            </value>
            <value>
                <fullName>Email - Touch</fullName>
            </value>
            <value>
                <fullName>Email - ME</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Email - ttbweb</fullName>
            </value>
            <value>
                <fullName>Email - ttb Advisory</fullName>
                <isActive>false</isActive>
                <label>Email - ttb Advisory</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>