force-app/main/default/objects/Case/fields/Email_Topic__c.field-meta.xml
<CustomField>
    <fullName>Email_Topic__c</fullName>
    <label>Email Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>สอบถามเกี่ยวกับ ทีเอ็มบี ทัช/อินเทอร์เน็ตแบงค์กิ้ง</fullName>
            </value>
            <value>
                <fullName>สอบถามเกี่ยวกับเงินฝาก</fullName>
            </value>
            <value>
                <fullName>ผลิตภัณฑ์สินเชื่อ</fullName>
            </value>
            <value>
                <fullName>สอบถามเรื่องอื่น ๆ</fullName>
            </value>
            <value>
                <fullName>ร้องเรียน</fullName>
            </value>
            <value>
                <fullName>เสนอแนะ</fullName>
            </value>
            <value>
                <fullName>ปรึกษาข้อมูลการลงทุนด้านกองทุน</fullName>
            </value>
            <value>
                <fullName>TMB Touch &amp; Internet Banking Usage</fullName>
            </value>
            <value>
                <fullName>Deposits &amp; Savings</fullName>
            </value>
            <value>
                <fullName>Loans &amp; Cards</fullName>
            </value>
            <value>
                <fullName>Other Enquiries</fullName>
            </value>
            <value>
                <fullName>Complaints</fullName>
            </value>
            <value>
                <fullName>Suggest</fullName>
            </value>
            <value>
                <fullName>TMB Advisory</fullName>
            </value>
            <value>
                <fullName>TMB Deposit Account</fullName>
            </value>
            <value>
                <fullName>TMB Lending Product</fullName>
            </value>
            <value>
                <fullName>บัญชีเงินฝากธนาคารทหารไทย</fullName>
            </value>
            <value>
                <fullName>MEBYTMB</fullName>
            </value>
            <value>
                <fullName>Not Match</fullName>
            </value>
            <value>
                <fullName>สอบถามเกี่ยวกับสินเชื่อ</fullName>
            </value>
            <value>
                <fullName>สอบถามเรื่องอื่นๆ</fullName>
            </value>
            <value>
                <fullName>MEBYttb</fullName>
            </value>
            <value>
                <fullName>ttb Advisory</fullName>
            </value>
            <value>
                <fullName>Deposit product</fullName>
            </value>
            <value>
                <fullName>Lending Product</fullName>
            </value>
            <value>
                <fullName>Touch Mobile Banking &amp; Internet Banking</fullName>
            </value>
            <value>
                <fullName>สอบถามบริการ Touch</fullName>
            </value>
            <value>
                <fullName>สอบถามผลิตภัณฑ์เงินฝากและบัตรเดบิต</fullName>
            </value>
            <value>
                <fullName>สอบถามผลิตภัณฑ์บัตรเครดิต/บัตรสินเชื่อ</fullName>
            </value>
            <value>
                <fullName>สอบถามผลิตภัณฑ์สินเชื่อบุคคล สินเชื่อบ้าน และสินเชื่ออื่นๆ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>