force-app/main/default/objects/Case/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error</label>
    <length>2</length>
    <type>Text</type>
</CustomField>