force-app/main/default/objects/Case/fields/FCR__c.field-meta.xml
<CustomField>
    <fullName>FCR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FCR?</label>
    <type>Checkbox</type>
</CustomField>