force-app/main/default/objects/Case/fields/First_Owner_BU__c.field-meta.xml
<CustomField>
    <fullName>First_Owner_BU__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Owner BU</label>
    <length>40</length>
    <type>Text</type>
</CustomField>