force-app/main/default/objects/Case/fields/Formula_KYC_Data_type__c.field-meta.xml
<CustomField>
    <fullName>Formula_KYC_Data_type__c</fullName>
    <formula>IF(KYC_Data_type__c = &apos;Y&apos;, &apos;Data Change&apos;, &apos;Data Not Change&apos;)</formula>
    <label>KYC Data type</label>
    <type>Text</type>
</CustomField>