force-app/main/default/objects/Case/fields/Goodwill__c.field-meta.xml
<CustomField>
    <fullName>Goodwill__c</fullName>
    <label>Goodwill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deviation</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Merchandize</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>