force-app/main/default/objects/Case/fields/Guideline__c.field-meta.xml
<CustomField>
    <fullName>Guideline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guideline</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>