force-app/main/default/objects/Case/fields/Handle_time__c.field-meta.xml
<CustomField>
    <fullName>Handle_time__c</fullName>
    <formula>(ClosedDate - CreatedDate)*24*60*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handle time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>