force-app/main/default/objects/Case/fields/Inter_Bank_Recipient_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Inter_Bank_Recipient_Account_No__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>เลขที่บัญชีผู้รับโอน</label>
    <length>255</length>
    <type>Text</type>
</CustomField>