force-app/main/default/objects/Case/fields/Inter_Bank_Recipient_Account_No_Full__c.field-meta.xml
<CustomField>
    <fullName>Inter_Bank_Recipient_Account_No_Full__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>เลขที่บัญชีผู้รับโอน (Full)</label>
    <length>175</length>
    <type>Text</type>
</CustomField>