force-app/main/default/objects/Case/fields/Inter_Bank_Recipient_Account_No_Temp__c.field-meta.xml
<CustomField>
    <fullName>Inter_Bank_Recipient_Account_No_Temp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>เลขที่บัญชีผู้รับโอน</label>
    <length>175</length>
    <type>Text</type>
</CustomField>