force-app/main/default/objects/Case/fields/Is_Bypassed__c.field-meta.xml
<CustomField>
    <fullName>Is_Bypassed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to validate Case Validation Rule</description>
    <label>Is Bypassed</label>
    <type>Checkbox</type>
</CustomField>