force-app/main/default/objects/Case/fields/Is_Create_by_Admin__c.field-meta.xml
<CustomField>
    <fullName>Is_Create_by_Admin__c</fullName>
    <formula>OR(CONTAINS(CreatedBy.UserProfileName__c , &apos;System Administrator&apos;),CreatedBy.UserProfileName__c  = &apos;App External API&apos; ,CreatedBy.UserProfileName__c = &apos;Retail Integration API Only&apos;)</formula>
    <label>Is Create by Admin</label>
    <type>Checkbox</type>
</CustomField>