force-app/main/default/objects/Case/fields/Is_My_Branch__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Branch__c</fullName>
    <description>Check if User&apos;s branch code match with branch code in case object</description>
    <formula>OR(CONTAINS( Owner:Queue.DeveloperName , $User.RTL_Branch_Code__c ), Owner:User.RTL_Branch_Code__c =  $User.RTL_Branch_Code__c) &amp;&amp; NOT( ISBLANK( $User.RTL_Branch_Code__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My Branch</label>
    <type>Checkbox</type>
</CustomField>