force-app/main/default/objects/Case/fields/Is_My_Case__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Case__c</fullName>
    <formula>if(Owner:User.Id =  $User.Id, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My Case</label>
    <type>Checkbox</type>
</CustomField>