force-app/main/default/objects/Case/fields/Is_My_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Created__c</fullName>
    <formula>if(CreatedById = $User.Id, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My Created</label>
    <type>Checkbox</type>
</CustomField>