force-app/main/default/objects/Case/fields/Is_My_Zone__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Zone__c</fullName>
    <formula>if($User.Zone_Code__c = &apos;&apos;, False,
if(Owner:User.Zone_Code__c = $User.Zone_Code__c ,true,false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My Zone</label>
    <type>Checkbox</type>
</CustomField>