force-app/main/default/objects/Case/fields/Is_Owner_active__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner_active__c</fullName>
    <formula>IF(Owner:Queue.Id &lt;&gt; &apos;&apos;,true,Owner:User.IsActive)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owner active</label>
    <type>Checkbox</type>
</CustomField>