force-app/main/default/objects/Case/fields/Is_Queue_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Queue_Owner__c</fullName>
    <formula>if(Owner:Queue.OwnerId &lt;&gt; &apos;&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Queue Owner</label>
    <type>Checkbox</type>
</CustomField>