force-app/main/default/objects/Case/fields/Is_SystemAdmin_User__c.field-meta.xml
<CustomField>
    <fullName>Is_SystemAdmin_User__c</fullName>
    <description>If user login is system admin return True, else return False. This field for use in Apex class only</description>
    <formula>if(OR( $User.UserProfileName__c = &apos;System Administrator&apos;, $User.UserProfileName__c = &apos;TMB System Administrator&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is SystemAdmin User</label>
    <type>Checkbox</type>
</CustomField>