force-app/main/default/objects/Case/fields/Is_User_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Is_User_Resolved__c</fullName>
    <formula>if( Resolved_By__c &lt;&gt; null ,CONTAINS(Resolved_By__c,$User.Employee_ID__c ),false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User Resolved</label>
    <type>Checkbox</type>
</CustomField>