force-app/main/default/objects/Case/fields/Is_web_service__c.field-meta.xml
<CustomField>
    <fullName>Is_web_service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is web service</label>
    <type>Checkbox</type>
</CustomField>