force-app/main/default/objects/Case/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue</label>
    <length>200</length>
    <type>Text</type>
</CustomField>