force-app/main/default/objects/Case/fields/Issue_New_for_OneApp__c.field-meta.xml
<CustomField>
    <fullName>Issue_New_for_OneApp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue display on Touch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>