force-app/main/default/objects/Case/fields/Just_Created_Flag__c.field-meta.xml
<CustomField>
    <fullName>Just_Created_Flag__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Just Created Flag</label>
    <type>Checkbox</type>
</CustomField>