force-app/main/default/objects/Case/fields/KYC_Approver2__c.field-meta.xml
<CustomField>
    <fullName>KYC_Approver2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>BDM หรือ ABDM: Approval = Manager of Manager of Case owner
SEPM: Approval = Manager of Manager of Customer owner</inlineHelpText>
    <label>KYC Approver2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>