force-app/main/default/objects/Case/fields/KYC_Approver__c.field-meta.xml
<CustomField>
    <fullName>KYC_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KYC Approver1</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Approver is currently inactive.</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>