force-app/main/default/objects/Case/fields/KYC_Data_type__c.field-meta.xml
<CustomField>
    <fullName>KYC_Data_type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KYC Data type Raw</label>
    <length>30</length>
    <type>Text</type>
</CustomField>