force-app/main/default/objects/Case/fields/KYC_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>KYC_Risk_Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KYC Risk Level</label>
    <length>5</length>
    <type>Text</type>
</CustomField>