force-app/main/default/objects/Case/fields/KYC_Status__c.field-meta.xml
<CustomField>
    <fullName>KYC_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KYC Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>