force-app/main/default/objects/Case/fields/KYC_SUB_4G__c.field-meta.xml
<CustomField>
    <fullName>KYC_SUB_4G__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KYC_SUB_4G</label>
    <length>255</length>
    <type>Text</type>
</CustomField>