force-app/main/default/objects/Case/fields/Last_UW_Owner__c.field-meta.xml
<CustomField>
    <fullName>Last_UW_Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last UW Owner</label>
    <length>150</length>
    <type>Text</type>
</CustomField>