force-app/main/default/objects/Case/fields/Last_Zone_Email__c.field-meta.xml
<CustomField>
    <fullName>Last_Zone_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Zone Email</label>
    <type>Email</type>
</CustomField>