force-app/main/default/objects/Case/fields/Manager_of_Case_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_of_Case_Owner_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Manager of Case Owner Email</label>
    <type>Email</type>
</CustomField>