force-app/main/default/objects/Case/fields/Mobile_Condition__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Condition__c</fullName>
    <description>Condition to filter only &apos;Contact Person Phone&apos; is correct mobile number</description>
    <formula>if(AND(LEN(SUBSTITUTE(SUBSTITUTE(Contact_Person_Phone__c , &apos; &apos;, &apos;&apos;),&apos;-&apos;,&apos;&apos;)) = 10, 
		OR(BEGINS(SUBSTITUTE(SUBSTITUTE(Contact_Person_Phone__c , &apos; &apos;, &apos;&apos;),&apos;-&apos;,&apos;&apos;),&apos;08&apos;), 
		   BEGINS(SUBSTITUTE(SUBSTITUTE(Contact_Person_Phone__c , &apos; &apos;, &apos;&apos;),&apos;-&apos;,&apos;&apos;),&apos;09&apos;), 
		   BEGINS(SUBSTITUTE(SUBSTITUTE(Contact_Person_Phone__c , &apos; &apos;, &apos;&apos;),&apos;-&apos;,&apos;&apos;),&apos;06&apos;)
			)
		),
	SUBSTITUTE(SUBSTITUTE(Contact_Person_Phone__c , &apos; &apos;, &apos;&apos;),&apos;-&apos;,&apos;&apos;),
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Condition</label>
    <type>Text</type>
</CustomField>