force-app/main/default/objects/Case/fields/No_of_Cheque_to_Order__c.field-meta.xml
<CustomField>
    <fullName>No_of_Cheque_to_Order__c</fullName>
    <label>No. of Cheque to Order</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>