force-app/main/default/objects/Case/fields/One_Previous_Owner__c.field-meta.xml
<CustomField>
    <fullName>One_Previous_Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>One Previous Owner</label>
    <length>19</length>
    <type>Text</type>
</CustomField>