force-app/main/default/objects/Case/fields/Over_SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>Over_SLA_Status__c</fullName>
    <description>Show SLA Status on Case</description>
    <formula>if(EntitlementId = &quot;&quot;,
  IMAGE(&quot;/resource/1579170953000/Case_SLA_Status_No_SLA&quot;, &quot;No SLA&quot;, 25,120),
  if(text(Status) = &quot;Completed&quot;,
    IMAGE(&quot;/resource/1579170882000/Case_SLA_Status_Done&quot;, &quot;Done!&quot;, 25,80),
    if(AND(IsClosed = true, SLA_Day__c &gt; 0 ),
       if( ClosedDate &gt; Commit_Date__c , 
        IMAGE(&quot;/resource/1579170984000/Case_SLA_Status_Overdue&quot;, &quot;Red&quot;, 25,80),
        IMAGE(&quot;/resource/1579170922000/Case_SLA_Status_Green&quot;, &quot;Green&quot;, 25,80)),
       if(IsClosed = true,
        IMAGE(&quot;/resource/1579170922000/Case_SLA_Status_Green&quot;, &quot;Green&quot;, 25,80),
        if(NOW() &gt; Commit_Date__c, 
      IMAGE(&quot;/resource/1579170984000/Case_SLA_Status_Overdue&quot;, &quot;Red&quot;, 25,80),
            IMAGE(&quot;/resource/1579170922000/Case_SLA_Status_Green&quot;, &quot;Green&quot;, 25,80))
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Over SLA Status</label>
    <type>Text</type>
</CustomField>