force-app/main/default/objects/Case/fields/Owner_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Branch_Name__c</fullName>
    <formula>Owner:User.RTL_Branch_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Branch Name</label>
    <type>Text</type>
</CustomField>