force-app/main/default/objects/Case/fields/Owner_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_Employee_ID__c</fullName>
    <description>This field for send to DWH.</description>
    <formula>Owner:User.Employee_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Employee ID</label>
    <type>Text</type>
</CustomField>