force-app/main/default/objects/Case/fields/Owner_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner Manager Email</label>
    <type>Email</type>
</CustomField>