force-app/main/default/objects/Case/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <description>This field for send to DWH</description>
    <formula>if(Owner:Queue.QueueName &lt;&gt; &apos;&apos;, Owner:Queue.QueueName,
Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>