force-app/main/default/objects/Case/fields/Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Owner_Team__c</fullName>
    <formula>if(Owner:Queue.QueueName &lt;&gt; null,Owner:Queue.QueueName, 
if(TEXT(Owner:User.RTL_Channel__c) = &apos;Branch&apos; ,Owner:User.RTL_Branch__c ,Owner:User.Zone__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Team</label>
    <type>Text</type>
</CustomField>