force-app/main/default/objects/Case/fields/Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Owner_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>