force-app/main/default/objects/Case/fields/Permission_Access_ATM_ADM__c.field-meta.xml
<CustomField>
    <fullName>Permission_Access_ATM_ADM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field for set field level security to show section ATM/ADM 
Not show in case screen, only use in apex code</description>
    <label>Permission Access ATM/ADM</label>
    <type>Checkbox</type>
</CustomField>