force-app/main/default/objects/Case/fields/Permission_Access_SE_Process__c.field-meta.xml
<CustomField>
    <fullName>Permission_Access_SE_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field for set field level security to show section CS process, Zone process, AAD Process, UW process
Not show in case screen, only use in apex code</description>
    <label>Permission Access SE Process</label>
    <type>Checkbox</type>
</CustomField>