force-app/main/default/objects/Case/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Position</label>
    <length>150</length>
    <type>Text</type>
</CustomField>