force-app/main/default/objects/Case/fields/Problem_Type__c.field-meta.xml
<CustomField>
    <fullName>Problem_Type__c</fullName>
    <label>Problem Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Failure - ไม่ได้รับบริการในสิ่งที่ลูกค้าต้องการ</fullName>
            </value>
            <value>
                <fullName>Delay - ได้รับบริการ แต่ช้า</fullName>
            </value>
            <value>
                <fullName>Quality/Suitability - ได้รับบริการ แต่ลูกค้าขอให้ตรวจสอบ</fullName>
            </value>
            <value>
                <fullName>Quality/Suitability - ได้รับบริการ แต่ลูกค้าไม่พอใจ</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>